--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: GitHub Actions CI
 on:
   push:
     branches: [ main ]
@@ -16,11 +16,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: install modules
+      - name: Install modules
         run: npm install
-      - name: build project
+      - name: Build project
         run: npm run build
-      - name: unit test
-        run: npm run test:unit
-      - name: lint code
+      - name: Unit tests
+        run: npm run test
+      - name: Lint code
         run: npm run lint
